fix: z-index dos cards e header

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -21,6 +21,8 @@ body{
         display: flex;
         justify-content: center;
 
+        z-index: 100;
+
 
         @include mixins.text;
 
@@ -241,6 +243,8 @@ body{
                 box-shadow: rgba(0, 0, 0, 0.25) 5px 5px 30px 10px;
 
                 overflow: hidden;
+
+                z-index: 0;
 
 
                 .card-txt-container{
